# openvpn-multi-authentication-plugin

./: README.md  Taskfile.yml
.github/workflows/: publish-release.yml
auth-service/: go.mod  go.sum
auth-service/cmd/auth-service/: main.go
auth-service/config/: config.yml
auth-service/internal/applog/: log.go
auth-service/internal/authcheck/: authcheck.go
auth-service/internal/config/: config.go
auth-service/internal/globals/: config.go  logger.go
auth-service/internal/ldapc/: ldapc.go
auth-service/internal/radiusc/: radiusc.go
auth-service/internal/websrv/: web_server.go
doc/: scheme.drawio
openvpn-plugin/: Cargo.toml
openvpn-plugin/config/: config.yml
openvpn-plugin/src/: auth.rs  lib.rs  license.rs  logging.rs  monitoring.rs  pconfig.rs  radius.rs
radius-client/: args.go  go.mod  go.sum  main.go  radius-client.code-workspace
