[package]
name = "openvpn-auth-plugin"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type=["cdylib"]
path="src/lib.rs"
edition="2018"

[dependencies]
reqwest={version = "0.10", features=["native-tls", "json"]}
tokio = {version="0.2.23", features=["full"]}
openvpn-plugin={version="0.4", features=["log"]}
config={version="0.10", features=["json", "yaml"]}
lazy_static="1.4"
clap="2.33.1"
slog={version="2.5.2", features=["max_level_trace", "release_max_level_trace"]}
slog-async="2.5.0"
slog-term="2.6.0"
once_cell="1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
num-traits = "0.2"
num-derive = "0.3"

